--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,6 +1,6 @@
 .introducao-bg {
   background: var(--cor-12);
-  box-shadow: inset 0 -120px #ffffff;
+  box-shadow: inset 0 -120px var(--cor-0);
 }
 
 .introducao {
@@ -30,45 +30,26 @@
   margin-bottom: 32px;
 }
 
-.introducao h1 span {
-  color: #ffbb00;
-}
-
 .introducao p {
   margin-bottom: 20px;
 }
 
-@media (max-width: 1200px) {
-  .introducao h1 {
-    font-size: 48px;
-  }
-
-  .introducao p {
-    font-size: 18px;
-  }
-}
-
 @media (max-width: 800px) {
   .introducao-bg {
-    background: #111111;
+    background: var(--cor-11);
     padding-top: 40px;
-    box-shadow: inset 0 -60px;
+    box-shadow: inset 0 -60px #ffffff;
   }
-
   .introducao {
     grid-template-columns: 1fr;
     gap: 32px;
   }
-
   .introducao-conteudo {
     padding-bottom: 0px;
   }
-
   .introducao h1 {
-    font-size: 32px;
     margin-bottom: 16px;
   }
-
   .introducao img {
     height: 300px;
     width: 100%;
