--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 
 /*Bicicleta*/
 @import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
 
 /*seguros*/
 @import "./seguros/seguros.css";
