--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 /*Utilidades*/
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /*Home*/
 @import "./home/introducao.css";
@@ -22,10 +23,14 @@
 @import "./bicicleta/bicicleta.css";
 @import "./bicicleta/seguro.css";
 
-/*seguros*/
+/*Seguros*/
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
+
+/*Contato*/
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
 
 /*Termos*/
 @import "./termos/termos.css";
